--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </body>
 <script>
     let datetxt = "27 - 07";
-    let datatxtletter = "สุขสันต์วันเกิดนะ LAT SAME ฉันรู้สึกขอบคุณชีวิตเสมอที่ทำให้ฉันได้พบกับคนดีๆ อย่างเธอ ขอบคุณที่เข้ามาอยู่เคียงข้างฉันและแสดงให้ฉันเห็นว่ารักแท้คืออะไร สุขสันต์วันเกิดนะ ปีนี้เธออายุ 19 แล้ว ฉันสัญญาว่าจะรักเธอมากๆ และมอบสิ่งที่ดีที่สุดให้กับเธอ ฉันหวังว่าเธอจะมีวันเกิดที่มีความสุขมากๆ และสดใสแบบนี้ตลอดไปนะที่รัก";
+    let datatxtletter = "สุขสันต์วันเกิดนะ LAT SAME ฉันรู้สึกขอบคุณชีวิตเสมอที่ทำให้ได้เจอคนดีๆ อย่างคุณ ขอบคุณที่อยู่เคียงข้างฉันและแสดงให้ฉันเห็นว่ารักแท้คืออะไร สุขสันต์วันเกิดนะ";
     let titleLetter = "ถึงที่รักของฉัน";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
